# ubuntu-release-list

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  CurlHTTPRequest.h  CurlHttpRequest.cpp  CurlSetup.cpp  HTTPRequestInterface.h  UbuntuReleaseParser.cpp  UbuntuReleaseParser.h  Utils.cpp  Utils.h  ubuntu-release.cpp
